# nationstage

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json
src/: app.css  app.html
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  discord.rs  main.rs  nscode.rs  scraper.rs
src/components/: head.svelte  login.svelte
src/components/nation/: nationCard.svelte
src/lib/api/: NSScraper.ts  rateLimit.ts  request.ts
src/lib/components/: CustomScroll.svelte  NewspaperCard.svelte  PolicyCard.svelte  content.svelte
src/lib/stores/: auth.ts  bookmarks.ts  notices.ts  notifications.ts  theme.ts
src/lib/types/: factbook.ts  issues.ts  nation.ts  notices.ts  rankings.ts  wa.ts
src/lib/utils/: bannerData.ts  censusData.ts  customPresetHTML5.ts  getDominantColor.ts  nationUtils.ts  newspaper.ts  noticeIcons.ts  parseBBCode.ts  parseBanner.ts  parseDispatch.ts  parseIssueResults.ts  parseIssues.ts  parseNationData.ts  parseNationDetails.ts  parseNationFactbooks.ts  parseNationPolicies.ts  parseNationRankings.ts  parseNotices.ts  parseNotificationData.ts  parseRegionDetails.ts  parseWAData.ts  parseWorldCensusInfo.ts  themeIcons.ts  waDataParser.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  404.svelte
src/routes/banners/: +page.svelte
src/routes/favorites/: +page.svelte
src/routes/issues/: +page.svelte
src/routes/login/: +page.svelte
src/routes/notices/: +page.svelte
src/types/: bbcode-parser.d.ts
static/: global.css  icon.wxs
(+26 files in other folders)
