[package]
name = "nationstage"
version = "0.3.6"
description = "A Tauri App"
authors = ["echolotl"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nationstage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
discord-rich-presence = "0.2.5"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
tokio = { version = "1.0", features = ["full"] }
base64 = "0.21"
log = "0.4"
window-vibrancy = "0.5.2"
env_logger = "0.10"
regex = "1.11.1"
lazy_static = "1.5.0"
